Add ability to configure stream consumer group to start at beginning of the stream (#580)
Stream consumer groups, by default, start at the end of the stream when
they're first created. Similar to Kafka's default.

Kafka has the ability to tell a consumer group to start at the beginning
(if the consumer group hasn't already committed offsets) - which is a
feature we USE in svix-webhooks-private. (Specifically, when a server
may write messages to a topic before workers with relevant consumer
groups have been spun up).

To make this work, I added a `msgs.stream.configure` endpoint, analogous
to the already extant `msgs.queue.configure` for configuring queue
consumer groups. This lets the client configure the default starting
position for the consumer group.
